force-app/main/default/objects/Account/fields/Campo_destructive__c.field-meta.xml
<CustomField>
    <fullName>Campo_destructive__c</fullName>
    <label>Campo destructive</label>
    <length>100</length>
    <type>Text</type>
</CustomField>