force-app/main/default/objects/Account/fields/Campo_remover__c.field-meta.xml
<CustomField>
    <fullName>Campo_remover__c</fullName>
    <label>Campo remover teste</label>
    <length>100</length>
    <type>Text</type>
</CustomField>