force-app/main/default/objects/Account/fields/Latam_hub_top__c.field-meta.xml
<CustomField>
    <fullName>Latam_hub_top__c</fullName>
    <label>Latam hub top</label>
    <length>255</length>
    <type>Text</type>
</CustomField>