force-app/main/default/objects/Account/fields/Teste2__c.field-meta.xml
<CustomField>
    <fullName>Teste2__c</fullName>
    <label>Teste2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>