force-app/main/default/objects/Account/fields/Teste2_Novo__c.field-meta.xml
<CustomField>
    <fullName>Teste2_Novo__c</fullName>
    <label>Teste2 Novo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>