force-app/main/default/objects/Account/fields/Teste_Latam_HUB_numero__c.field-meta.xml
<CustomField>
    <fullName>Teste_Latam_HUB_numero__c</fullName>
    <label>Teste Latam HUB numero</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>