force-app/main/default/objects/Account/fields/US0003Field__c.field-meta.xml
<CustomField>
    <fullName>US0003Field__c</fullName>
    <label>US0003Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>